--- a/ticket_hub/pubspec.yaml
+++ b/ticket_hub/pubspec.yaml
@@ -37,6 +37,14 @@ dependencies:
   firebase_core: ^2.24.2
   cloud_firestore: ^4.14.0
   onboarding: ^4.0.2
+  google_fonts: ^6.2.0
+  flutter_screenutil: ^5.9.0
+  intl: ^0.19.0
+  font_awesome_flutter: ^10.7.0
+  go_router: ^13.1.0
+  flutter_native_splash: ^2.3.7
+  geolocator: ^11.0.0
+  eva_icons_flutter: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -74,10 +82,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Poppins-M
+      fonts:
+        - asset: assets/fonts/Poppins-Medium.ttf
+    - family: Poppins-T
+      fonts:
+        - asset: assets/fonts/Poppins-Thin.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
