--- a/ticket_hub/pubspec.yaml
+++ b/ticket_hub/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cached_network_image: ^3.0.0
+
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,6 +51,7 @@ dependencies:
   eva_icons_flutter: ^3.1.0
   curved_navigation_bar: ^1.0.3
   flutter_bloc: ^8.1.5
+  gif: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/animation.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
