--- a/ticket_hub/pubspec.yaml
+++ b/ticket_hub/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   gif: ^2.3.0
   firebase_storage: ^11.7.2
   image_picker: ^1.1.0
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
