--- a/ticket_hub/android/app/src/main/AndroidManifest.xml
+++ b/ticket_hub/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="ticket_hub"
+        android:label="Tickets Hub"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
