--- a/ticket_hub/pubspec.yaml
+++ b/ticket_hub/pubspec.yaml
@@ -31,11 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
   cached_network_image: ^3.0.0
+  animated_splash_screen: ^1.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.24.2
+  firebase_core: ^2.30.0
   cloud_firestore: ^4.14.0
   onboarding: ^4.0.2
   google_fonts: ^6.2.0
@@ -44,14 +46,18 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   go_router: ^13.1.0
   flutter_native_splash: ^2.3.7
+  geolocator: ^11.0.0
   eva_icons_flutter: ^3.1.0
   curved_navigation_bar: ^1.0.3
   flutter_bloc: ^8.1.5
   gif: ^2.3.0
+  flutter_svg: ^2.0.10+1
   firebase_storage: ^11.7.2
+  firebase_auth: ^4.19.2
   image_picker: ^1.1.0
-  shared_preferences:
-  url_launcher: ^6.2.6
+  modal_progress_hud_nsn: ^0.5.1
+  google_sign_in: ^6.2.1
+#  firebase_auth: ^4.19.2
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +83,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/
     - assets/images/animation.gif
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
