--- a/ticket_hub/pubspec.yaml
+++ b/ticket_hub/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   image_picker: ^1.1.0
   modal_progress_hud_nsn: ^0.5.1
   google_sign_in: ^6.2.1
+  shared_preferences: ^2.2.3
 #  firebase_auth: ^4.19.2
 
 dev_dependencies:
